--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,22 @@
 Package: iemand
 Version: 0.0.0.9000
-Title: What the Package Does (One Line, Title Case)
-Description: What the package does (one paragraph).
-Authors@R: person("First", "Last", , "first.last@example.com", c("aut", "cre"))
-License: What license it uses
+Title: Creates fake people
+Description: Creates fake people data such as birth year and name.
+Authors@R: person("Maëlle", "Salmon",, "maelle.salmon@yahoo.se", c("aut", "cre"))
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
+URL: https://github.com/maelle/someone
+BugReports: https://github.com/maelle/someone/issues
+Depends: R (>= 3.0.1)
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown,
+    covr
+License: MIT + file LICENCE
+VignetteBuilder: knitr
+Imports: 
+    praise,
+    magrittr
 RoxygenNote: 6.0.1
